--- a/front-end/package.json
+++ b/front-end/package.json
@@ -13,6 +13,7 @@
     "@nextui-org/react": "^2.0.9",
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
+    "cors": "^2.8.5",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
