--- a/API/package.json
+++ b/API/package.json
@@ -19,7 +19,8 @@
     "mysql": "^2.18.1",
     "nodemailer": "^6.9.5",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.0"
+    "swagger-ui-express": "^5.0.0",
+    "xml-crypto": "^4.1.0"
   },
   "devDependencies": {
     "swagger-autogen": "^2.23.5"
