--- a/DAC-FRONT-END/package.json
+++ b/DAC-FRONT-END/package.json
@@ -10,6 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-brands-svg-icons": "^6.4.2",
+    "@fortawesome/free-regular-svg-icons": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
     "localforage": "^1.10.0",
@@ -19,7 +24,7 @@
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
     "sort-by": "^0.0.2",
-    "sweetalert2": "^11.7.27",
+    "sweetalert2": "^11.6.13",
     "sweetalert2-react-content": "^5.0.7"
   },
   "devDependencies": {
