--- a/API/package.json
+++ b/API/package.json
@@ -16,12 +16,14 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "haciendacostarica-signer": "^1.0.2",
     "jsonwebtoken": "^9.0.1",
     "mysql": "^2.18.1",
     "node-forge": "^1.3.1",
     "nodemailer": "^6.9.5",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0",
+    "xadesjs": "^2.4.4",
     "xml-crypto": "^4.1.0"
   },
   "devDependencies": {
