--- a/API/package.json
+++ b/API/package.json
@@ -21,6 +21,8 @@
     "mysql": "^2.18.1",
     "node-forge": "^1.3.1",
     "nodemailer": "^6.9.5",
+    "pug": "^3.0.2",
+    "puppeteer": "^21.6.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0",
     "xadesjs": "^2.4.4",
