--- a/API/package.json
+++ b/API/package.json
@@ -19,6 +19,7 @@
     "haciendacostarica-signer": "^1.0.2",
     "jsonwebtoken": "^9.0.1",
     "mysql": "^2.18.1",
+    "mysql2": "^3.6.5",
     "node-forge": "^1.3.1",
     "nodemailer": "^6.9.5",
     "pug": "^3.0.2",
