--- a/API/package.json
+++ b/API/package.json
@@ -18,6 +18,7 @@
     "express": "^4.18.2",
     "haciendacostarica-signer": "^1.0.2",
     "jsonwebtoken": "^9.0.1",
+    "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "mysql2": "^3.6.5",
     "node-forge": "^1.3.1",
