--- a/DAC-FRONT-END/package.json
+++ b/DAC-FRONT-END/package.json
@@ -23,9 +23,11 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
+    "react-to-print": "^2.15.1",
     "sort-by": "^0.0.2",
     "sweetalert2": "^11.6.13",
-    "sweetalert2-react-content": "^5.0.7"
+    "sweetalert2-react-content": "^5.0.7",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
